--- a/frontend/src/dashboard.html
+++ b/frontend/src/dashboard.html
@@ -54,6 +54,53 @@
             </div>
         </div>
     </div>
+    <div class='row'>
+        <div class='col-md-12 '>
+            <hr>
+        </div>
+    </div>
+    <div class="container" style="margin-top:30px ;text-align:center;">
+        <div class="row">
+            <div class="col-md-12 ">
+                <div class="btn-toolbar">
+                    <button type="button" id="btn1" class="btn btn-light btn-xl btn-outline-dark mr-3"
+                        data-toggle="collapse" data-target="#demo1" aria-expanded="false">Termine
+                        heute</button>
+                    <button type="button" id="btn2" class="btn btn-light btn-xl btn-outline-dark mr-3"
+                        data-toggle="collapse" data-target="#demo2" aria-expanded="false">Termine
+                        morgen</button>
+                    <button type="button" id="btn3" class="btn btn-light btn-xl btn-outline-dark mr-3"
+                        data-toggle="collapse" data-target="#demo3" aria-expanded="false">Termine
+                        übermorgen</button>
+                    <button type="button" id="btn4" class="btn btn-light btn-xl btn-outline-dark mr-3"
+                        data-toggle="collapse" data-target="#demo" aria-expanded="false">Terminfortschnitt
+                        heute</button>
+                </div>
+                <div class="col">
+                    <div id="demo1" class="collapse multi-collapse">
+                        <div class="mt-3">
+                            Lorem ipsum dolor text....
+                        </div>
+                    </div>
+                </div>
+                <div class="col">
+                    <div id="demo2" class="collapse multi-collapse">
+                        <div class="mt-3">
+                            Lorem ipsum dolor text....
+                        </div>
+                    </div>
+                </div>
+                <div class="col">
+                    <div id="demo3" class="collapse multi-collapse">
+                        <div class="mt-3">
+                            Lorem ipsum dolor text....
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+
 
 </body>
 
