--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -9,7 +9,7 @@
   <meta name="description" content="Organisations Tool für SarsCov-19-Testcenter" />
   <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
   <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
-  <title>Corona Atlas</title>
+  <title>CoTip</title>
 </head>
 
 <body>
